Top navigation partly implememted

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,11 @@
       content="UG SPMS office productivity application"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="style.css">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>React App</title>
   </head>
   <body>
