--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>React App</title>
+    <title>Dean's Office, SPMS</title>
   </head>
   <body>
     <div id="root"></div>
